--- a/wp-content/themes/kleem_theme/style.css
+++ b/wp-content/themes/kleem_theme/style.css
@@ -748,7 +748,7 @@ article.type-opinion .ratingbox .stats {
 
 
 article.type-opinion .ratingbox div.disaffirmation > a{
-	margin: 0em 0em 0em 1em;;
+	margin: 0em 0em 0em 1em;
 
 }
 
