--- a/wp-content/themes/urwahl3000_kleem/style.css
+++ b/wp-content/themes/urwahl3000_kleem/style.css
@@ -1,9 +1,8 @@
 /*
 Theme Name:     Urwahl3000 Kleem Childtheme
-Theme URI:      http://kre8tiv.de/urwahl3000/
+Theme URI:      http://www.kleem.de
 Description:    Child-Theme für Urwahl3000
-Author:         Benjamin Jopen
-Author URI:     http://kre8tiv.de/
+Authoren:         Marina Thuns, Stefan Kaiser
 Template:       urwahl3000                           
 Version:        1.0.0
 */
