--- a/wp-content/themes/urwahl3000_kleem/style.css
+++ b/wp-content/themes/urwahl3000_kleem/style.css
@@ -157,6 +157,7 @@
 	
 }
 
+
 /*thumbs images*/
 .blog .wp-post-image{
 	margin: 1% 2% 0% 0%;
@@ -346,4 +347,25 @@ article.type-opinion .opinion_topic_wrap a{
 	margin-bottom: 5%;
 }
 
-
+#ajax_pagination_btn{
+	background: #63a14f;
+	background: url(data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiA/Pgo8c3ZnIHhtbG5zPSJod…EiIGhlaWdodD0iMSIgZmlsbD0idXJsKCNncmFkLXVjZ2ctZ2VuZXJhdGVkKSIgLz4KPC9zdmc+);
+	background: -moz-linear-gradient(top, #63a14f 0%, #63a14f 100%);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#63a14f), color-stop(100%,#63a14f));
+	background: -webkit-linear-gradient(top, #63a14f 0%,#63a14f 100%);
+	background: -o-linear-gradient(top, #63a14f 0%,#63a14f 100%);
+	background: -ms-linear-gradient(top, #63a14f 0%,#63a14f 100%);
+	background: linear-gradient(to bottom, #63a14f 0%,#63a14f 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#63a14f', endColorstr='#63a14f',GradientType=0 );
+	display: inline-block;
+	padding: 0.5em 1em;
+	border: 1px solid #035b26;
+	text-shadow: 1px 1px 2px #012b12;
+	color: #fff;
+	box-shadow: 0 1px 0 #54b845 inset;
+	border-radius: 7px;
+	font-weight: normal;
+	font-family: 'OpenSansBold','OpenSansRegular', Helvetica Neue, Helvetica, Verdana, Arial, sans-serif;
+	width: auto;
+	font-size: 1em;
+}
