--- a/wp-content/themes/urwahl3000_kleem/style.css
+++ b/wp-content/themes/urwahl3000_kleem/style.css
@@ -49,12 +49,27 @@
 }
 
 
-@media screen {
-
-}
-
-
 @media only screen and (min-width: 770px){
+	#fb-like-button {
+		width: 30px;
+		height: 30px;
+		margin-left: 10px;
+		margin-top: -4px;
+		background: #0a321e;
+		-webkit-border-radius: 4px;
+		-moz-border-radius: 4px;
+		border-radius: 4px;
+		border: 1px solid white;
+	}
+	
+	#fb-like-button > a {
+		padding: none;
+		display: block;
+	}
+	
+
+	
+	
 
 /* header - image */	
 	#header.widthimg {
@@ -153,6 +168,31 @@
 		margin: 10px 0.7em 0 0;;
 		padding: 0;
 		float: left;
+	}
+	
+}
+
+@media only screen and (min-width: 1250px){
+	
+/* fb like-button */
+	#fb-like-button {
+		width: 42px;
+		height: 43px;
+		position: fixed;
+		left: 0;
+		top: 110px;
+		margin: 0px;
+		-webkit-border-left-right-radius: 0px;
+		-webkit-border-bottom-left-radius: 0px;
+		-moz-border-radius-topleft: 0px;
+		-moz-border-radius-bottomleft: 0px;
+		border-top-left-radius: 0px;
+		border-bottom-left-radius: 0px;
+		border: none;
+	}
+	
+	#fb-like-button > a {
+		padding: 5px 6px 3px 1px;
 	}
 	
 }
